--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,41 @@
-Dockerfile
-.dockerignore
 node_modules
 npm-debug.log
-README.md
+yarn-error.log
+package-lock.json
+yarn.lock
 .next
+out
+build
+coverage
+.nyc_output
+.DS_Store
+*.pem
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env
+.env*.local
+.vercel
+*.tsbuildinfo
+next-env.d.ts
 .git
-.minio
-.docker
+.gitignore
+.gitattributes
+Dockerfile
+Dockerfile.dev
+docker-compose*.yml
+.dockerignore
+.vscode
+.idea
+*.swp
+*.swo
+*~
+logs
+*.log
+Thumbs.db
+README.md
+CHANGELOG.md
+docs/
+.github
+.gitlab-ci.yml
+.travis.yml
