--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@tiptap/starter-kit": "^2.10.1",
     "@typescript-eslint/eslint-plugin": "6.19.1",
     "@typescript-eslint/parser": "6.19.1",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.7",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
@@ -69,6 +71,7 @@
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "next-intl": "^3.21.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "prettier": "3.2.4",
     "prisma": "^5.20.0",
